# mugen

./: .coveragerc  .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  .quartenv  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  compose.yaml  config.py  flaskman.py  pyproject.toml  quartman.py  reqs.gloria.base.txt  requirements.txt
.aws/: ecs-task-definition.template.json
app/: __init__.py  config.py
conf/: .env.example  .env.sample  com.vorsocomputing.gloria.cron.systemd.service.sample  com.vorsocomputing.gloria.cron.systemd.timer.sample  downstream.toml.sample  hypercorn.service.sample  hypercorn.systemd.service.sample  hypercorn.toml.sample  ipc.systemd.service.sample  ipc.systemd.timer.sample  mugen.overlay.example.json  mugen.toml.sample  nginx  uwsgi
docs/: acp-audit-lifecycle.md  acp-rbac-policy.md  acp-role-permission-lifecycle.md  acp-session-management.md  acp-tenant-invitations.md  agent-runtime-authoring.md  agent-runtime-debugging-playbook.md  agent-runtime-design.md  apps.md  clients.md  container-deployment.md  context-engine-authoring.md  context-engine-debugging-playbook.md  context-engine-design.md  context-engine-strengthening-decisions.md  context-engine-user-stories.md  core-health-readiness-runbook.md  dependency-injection.md  downstream-architecture-conformance.md  ecs-fargate-deployment-runbook.md  extensions.md  gateways.md  human-handoff-backend.md  line-support-contract.md  logging.md  matrix-support-contract.md  messaging-ingress-contract.md  migration-track-separation.md  platform-runtime-profiles.md  services.md  signal-support-contract.md  telegram-support-contract.md  troubleshooting.md  web-support-contract.md  wechat-support-contract.md  whatsapp-support-contract.md
migrations/: env.py  schema_contract.py
mugen/: __init__.py  bootstrap_state.py  config.py
mugen_test/: __init__.py  test_acp_api_audit_emission.py  test_acp_contrib_action_handler_parity.py  test_acp_contrib_rbac_crud_schema.py  test_acp_contrib_role_permission_lifecycle.py  test_acp_contrib_runtime_crud_schema.py  test_acp_contrib_tenant_crud_schema.py  test_acp_crud_tenant_tenantid_injection.py  test_acp_di_runtime_regression.py  test_acp_least_privilege_global_roles_migration_guards.py  test_acp_phase1_migration_guards.py  test_audit_contrib.py  test_audit_evidence_blob_service.py  test_audit_migration_guards.py  test_audit_service_correlation_and_biz_trace.py  test_audit_service_lifecycle_and_chain.py  test_audit_validation.py  test_channel_orchestration_acp_action_dispatch.py  test_channel_orchestration_contrib_binding.py  test_channel_orchestration_lifecycle.py  test_channel_orchestration_work_item_service.py  test_check_conventional_commit.py  test_conf_samples.py  test_core_crud_validation_contracts.py  test_core_health_endpoints.py  test_core_migration_schema_literals.py  test_core_model_schema_tokens.py  test_ecs_task_definition_renderer.py  test_import_legacy_runtime_config.py  (+318 more)
(+1454 files in other folders)
