[tool.poetry]
name = "mugen"
version = "0.43.2"
description = "Microframework for instant messaging AI assistants."
authors = ["Vorso Computing, Inc. <brightideas@vorsocomputing.com>"]
maintainers = ["Sando George <sando.csc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiodns = "^3.5.0"
atomicwrites = "^1.4.1"
boto3 = "^1.41.2"
brotli = "^1.2.0"
cachetools = "^6.2.2"
chromadb = "^1.3.5"
groq = "^0.36.0"
matrix-nio = "^0.25.2"
qdrant-client = "^1.16.0"
quart = "^0.20.0"
sentence-transformers = "^5.1.2"
torch = "2.8.0"
tomlkit = "^0.13.3"
peewee = "^3.18.3"
python-olm = "^3.2.16"
pycurl = "^7.45.7"
pymilvus = "^2.6.3"
aiofiles = "24.1.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
pyjwt = "^2.10.1"
quart-cors = "^0.8.0"
psycopg = "^3.3.2"
argon2-cffi = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pinecone = {extras = ["asyncio"], version = "^8.1.0"}
cryptography = "^46.0.3"
openai = "^1.98.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.11.0"
black = "^26.1.0"
pylint = "^3.3.0"
pre-commit = "^4.0.0"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
